Create an if/else statement that checks if we get the title value from the view function that will render the template

--- a/Insta_app/templates/all-apps/base.html
+++ b/Insta_app/templates/all-apps/base.html
@@ -5,6 +5,8 @@
 
     {% if title %}
     <title>Instagram - {{title}}</title>
+    {% else %}
+    <title>Instagram</title>
     {% endif %}
   </head>
   <body>
