--- a/Insta_app/templates/all-apps/base.html
+++ b/Insta_app/templates/all-apps/base.html
@@ -1,4 +1,5 @@
-{%extends 'all-apps/base.html'%}
+<!-- {%extends 'all-apps/base.html'%} -->
+{% load bootstrap3 %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,10 +10,14 @@
     {% else %}
     <title>Instagram</title>
     {% endif %}
-    {% block content %}
-{{block.super}}
+    {% block styles %}
+{% bootstrap_css %}
 {% endblock %}
   </head>
   <body>
+      {% block scripts %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   {% bootstrap_javascript %}
+  {% endblock %}
   </body>
 </html>
