--- a/Insta_app/templates/all-apps/base.html
+++ b/Insta_app/templates/all-apps/base.html
@@ -15,7 +15,9 @@
 {% endblock %}
   </head>
   <body>
-      {% block scripts %}
+      {% block content %} <h1 class='text-center'>Instagram</h1> {%endblock%}
+    
+    {% block scripts %}
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    {% bootstrap_javascript %}
   {% endblock %}
