--- a/Insta_app/templates/all-apps/base.html
+++ b/Insta_app/templates/all-apps/base.html
@@ -16,6 +16,7 @@
 {% endblock %}
   </head>
   <body>
+    {% include "navbar.html"%}
       {% block content %} <h1 class='text-center'>Instagram</h1> {%endblock%}
     
     {% block scripts %}
