Add files for search functionality

--- a/Insta_app/templates/all-apps/base.html
+++ b/Insta_app/templates/all-apps/base.html
@@ -1,4 +1,4 @@
-<!-- {%extends 'all-apps/base.html'%} -->
+{%extends 'all-apps/base.html'%}
 {% load bootstrap3 %}
 {% load static %}
 <!DOCTYPE html>
