--- a/Insta_app/templates/index.html
+++ b/Insta_app/templates/index.html
@@ -1,1 +1,66 @@
-<h1>Welcome to Instagram</h1>
+<!-- <h1>Welcome to Instagram</h1> -->
+{% extends 'registration/base.html' %}
+{% load bootstrap3 %}
+
+{% block content %}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Instagram</title>
+</head>
+
+<body id="home">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <div>
+          <img src="/static/images/iphonIG.gif" alt="Demo" class="img-fluid" height="450">
+        </div>
+      </div>
+      <div class="col-md-4">
+
+        <div class="card">
+          <div class="card-title">
+            <h3 class="text-center">Instagram</h3>
+          </div>
+          <div class="card-body">
+            <span class="text-center">
+              <p><strong>Sign up to see photos and videos from your friends.</strong></p>
+            </span>
+            <p><a href="/accounts/register/"><button class="btn btn-primary btn-lg home-btn">Sign Up</button></a></p>
+            <span class="text-center">
+              <p>By signing up, you agree to our <b>Terms , Data Policy</b> and <b>Cookies Policy</b> .</p>
+            </span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <p class="text-center">Have an account? <a href="/accounts/login/">Sign In</a></p>
+          </div>
+        </div>
+        <div>
+          <div>
+            <span class="download">
+              <h5 class="text-center">Get the app.</h5>
+            </span>
+          </div>
+          <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8&vt=lo" target="_blank"><img
+              src="../static/images/apple-store.png" alt="App Store" class="img-fluid" width="155"></a><a
+            href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DXFvrAwAEAAFy928zYRp1M-Qf66mW%26utm_content%3Dlo%26utm_medium%3Dbadge"
+            target="_blank"><img src="../static/images/playstore.png" alt="Google Store" class="img-fluid"
+              width="150"></a>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+  </div>
+</body>
+
+</html>
+{% endblock %}
