--- a/Insta_app/templates/index.html
+++ b/Insta_app/templates/index.html
@@ -51,9 +51,9 @@
             </span>
           </div>
           <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8&vt=lo" target="_blank"><img
-              src="../static/images/apple-store.png" alt="App Store" class="img-fluid" width="155"></a><a
+              src="static/images/icons8-apple-app-store-32.png" alt="App Store" class="img-fluid" width="155"></a><a
             href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DXFvrAwAEAAFy928zYRp1M-Qf66mW%26utm_content%3Dlo%26utm_medium%3Dbadge"
-            target="_blank"><img src="../static/images/playstore.png" alt="Google Store" class="img-fluid"
+            target="_blank"><img src="static/images/icons8-google-play-30.png" alt="Google Store" class="img-fluid"
               width="150"></a>
         </div>
       </div>
