--- a/Insta_app/templates/registration/login.html
+++ b/Insta_app/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <div class="row">
-    <!-- Empty div -->
+     
     <div class="col-md-4"></div>
     <div class="col-md-4">
       {% if form.errors %}
@@ -16,7 +16,7 @@
         </div>
         <div class="panel-body">
 
-          <form  action="/accounts/login/" method="post">
+          <form  action="/" method="post">
             {% csrf_token %}
             {% bootstrap_form form%}
 
@@ -33,9 +33,13 @@
       </div>
 
     </div>
-    <!-- empty div -->
+     
     <div class="col-md-4"></div>
   </div>
 </div>
 
 {% endblock %}
+
+
+
+ 
