--- a/static/css/insta.css
+++ b/static/css/insta.css
@@ -1,21 +1,16 @@
-h1
-{
-  color: green;
-}
 body{
-  font-family: 'PT Sans Narrow', sans-serif;
-  /* font-family: 'Pacifico', cursive; */
+  font-family:  'Nunito', sans-serif;
   background-color: #f5f5f5;
   font-size: 1.3em;
 }
 h2,h3{
-  font-family: 'Pacifico', cursive;
+  font-family: 'Nunito', sans-serif;
 }
 .navbar{
   background-color: white;
   padding-bottom: 1.2%;
   padding-top: 1.2%;
-  font-family: 'Pacifico', cursive;
+  font-family: 'Nunito', sans-serif;
   text-decoration: none;
   margin-bottom: 3%;
   
@@ -72,7 +67,6 @@ span{
   padding: 0 4px;
 }
 
-/* Create four equal columns that sits next to each other */
 .post-column {
   flex: 25%;
   max-width: 25%;
@@ -85,7 +79,7 @@ span{
   
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
+
 @media screen and (max-width: 800px) {
   .post-column {
     flex: 50%;
@@ -93,7 +87,6 @@ span{
   }
 }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .post-column {
     flex: 100%;
