--- a/Insta_app/templates/index.html
+++ b/Insta_app/templates/index.html
@@ -1,5 +1,4 @@
-<!-- <h1>Welcome to Instagram</h1> -->
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
 {% load bootstrap3 %}
 
 {% block content %}
@@ -12,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Instagram</title>
+  {{form.media}}
 </head>
 
 <body id="home">
@@ -20,9 +20,29 @@
       <div class="col-md-2"></div>
       <div class="col-md-4">
         <div>
-          <img src="/static/images/iphonIG.gif" alt="Demo" class="img-fluid" height="450">
+          <img src="static/images/AHcP.gif" alt="Demo" class="img-fluid" height="450">
         </div>
       </div>
+
+      {% for image in images %}
+   <div class="row">
+     <div class="col-md-3"></div>
+     <div class="col-md-5">
+         <p style="font-family: 'Nunito', sans-serif;">{{ image.location }}</p>
+          <div class="card border-secondary">
+         {% autoescape on %}
+         <p style="font-family: 'Nunito', sans-serif;"><strong> Caption :</strong> {{ image.caption | safe }}</p>
+         {% endautoescape %}
+         <p style="font-family:'Nunito', sans-serif;"><strong>Likes :</strong> {{ image.likes }}</p>
+         <a href="{% url 'index' %}">
+          <img src="{{image.image.url}}" data-target="#imageModal{{image.id}}" data-toggle="modal" alt=""
+            class="img-fluid" id="eachimage"></a>
+         <br>
+         <hr>
+       </div>
+   </div>
+ </div>
+{% endfor %}
       <div class="col-md-4">
 
         <div class="card">
@@ -51,9 +71,9 @@
             </span>
           </div>
           <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8&vt=lo" target="_blank"><img
-              src="static/images/icons8-apple-app-store-32.png" alt="App Store" class="img-fluid" width="155"></a><a
+              src="static/images/Download-on-the-App-Store-button.png" alt="App Store" class="img-fluid" width="155"></a><a
             href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DXFvrAwAEAAFy928zYRp1M-Qf66mW%26utm_content%3Dlo%26utm_medium%3Dbadge"
-            target="_blank"><img src="static/images/icons8-google-play-30.png" alt="Google Store" class="img-fluid"
+            target="_blank"><img src="static/images/icons8-apple-app-store-824.png"alt="Google Store" class="img-fluid"
               width="150"></a>
         </div>
       </div>
@@ -63,4 +83,5 @@
 </body>
 
 </html>
-{% endblock %}
+{% include 'footer.html' %}
+{% endblock %} 
