--- a/Insta_app/templates/navbar.html
+++ b/Insta_app/templates/navbar.html
@@ -8,16 +8,14 @@
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">Instagram</a>
-    </div>
+     
     <!-- Adding a search form  -->
     <div class="col-sm-4 col-md-4 navbar-right">
 
-      <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+      <form class="navbar-form" role="search" action="{% url 'profile' %}">
 
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Article" name="article">
+          <input type="text" class="form-control" placeholder="Search Users" name="users">
           <div class="input-group-btn">
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
@@ -31,7 +29,7 @@
     <div class="col-sm-6 col-md-6">
       {% if user.is_authenticated %}
       <ul>
-        <li class="dropdown">
+        <div class="dropdown">
           <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
                     <span class="caret"></span>
                 </a>
@@ -45,8 +43,11 @@
             <li>
               <a href="/logout">Logout</a>
             </li>
+            <li>
+              <a href="/profile">Profile</a>
+              </li>
           </ul>
-        </li>
+        </div>
       </ul>
       {% else %}
       <li>
